# nExtHack

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements-dev.in  requirements-dev.txt  requirements.txt
ansible-k3s/: .gitignore  add-sshkey.yml  anygroup.yml  install-docker-registry.yml  inventory.yaml  site.yml
auto_post/: README.md  constraints.txt  pyproject.toml  requirements-dev.txt  requirements.txt
auto_post/src/auto_post/: auto_post.py
data_lake/: .env.template  README.md  deploy-flink-s3.sh  docker-compose-flink-iceberg-s3.yml  docker-compose-flink-s3.yml  docker-compose-flink-sql-with-presto-s3.yml  start_rustfs.sh  test_flink_s3_integration.sh  test_iceberg_s3.sh  test_rustfs.sh
data_lake/config/rustfs/: default.env
data_lake/docker/: .env.dev  deploy-flink-s3.sh  docker-compose.yml  init-network.sh
data_lake/docker/compose/: minio.yml  rustfs.yml
data_lake/docker/conf/hadoop/: core-site.xml
data_lake/docker/flink/: Dockerfile
data_lake/docker/scripts/: test_cleanup.sql  test_flink_sql_hudi_s3.sql  test_flink_sql_iceberg_s3.sql  test_flink_sql_s3.sql
data_lake/docs/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE_REPORT.md  FINAL_STATUS_REPORT.md  FLINK_S3_DEPLOYMENT_GUIDE.md  FLINK_S3_DEPLOYMENT_SUMMARY.md  FLINK_S3_QUICK_REFERENCE.md
data_lake/flink-iceberg-image/: Dockerfile
data_lake/flink-s3-image/: Dockerfile
dns-updater/: dev-requirements.txt  pyproject.toml  requirements.txt
dns-updater/dns_updater/: AliApi.py  ali_api.py  cli.py  dns_updater.py
dns-updater/src/dns_updater/: dns_updater.py
dns-updater/tests/: test_dns_updater.py
flink/: .gitignore  scaffolding.sh
flink/flink-demo/: pom.xml
flink/flink-demo/src/main/java/org/nextchen/flink/: DataStreamJob.java
flink/hello/: pom.xml
flink/hello/src/main/java/org/nextchen/demo/: Main.java
gin/: go.mod
gorm/: db.go  db_test.go  go.mod  test.db
homebrew-tools/: deps_management.py
litellm/: config.yaml  fetch_models.py  fetch_models_litellm.py  init.sh  main.py  pyproject.toml
llm_demo/: mcp-stdio-get-weather.py  openai-demo.py  openai-function-calling-demo.py  openai-function-calling-langchain-demo.py  openai-function-calling-langgraph-agent.py  openai-function-calling-langgraph-create-tool-calling-agent.py  openai-function-calling-langgraph-toolnode-demo.py  openai-mcp-langchain.py  openai-react-langgraph-create-react-agent.py
llm_demo/agent/: cache.py  output_parser.py  tools_handler.py
npjm/: projects.py  requirements-dev.in  requirements-dev.txt  requirements.txt
npjm/tests/: npjm_test.py
ollama-tools/: backup_model.sh
oss-image-uploader/: .gitignore  go.mod  go.sum  main.go  main_internal_test.go
oss-image-uploader/driver/: alioss.go  alioss_test.go
oss-image-uploader/lib/: download.go
publish-to-wechat/: Makefile  go.mod  go.sum  main.go  sync.py
publish-to-wechat/cmd/publish-to-wechat/: main.go
python_scaffolding/: dep_install_dev.sh  dep_install_prod.sh  gen_pyproject.sh  init_proj_struct.sh  init_venv.sh
rag4pdf/: .mcp.json  pyproject.toml  rag.py  simpe-rag.py
rag4pdf/notebooks/: PDFParser.py  simpe-rag.py
rag4pdf/src/rag4pdf/: __init__.py  build.py  eval.py  rag.py  service.py  utils.py
rag4pdf/tests/: test_build.py  test_eval.py  test_rag.py  test_service.py  test_utils.py
sql-analytics-gpt/: analytics-gpt.ipynb  analytics_gpt.py  demo.sql  main.py  utils.py
storage_inspect/: analytics.sh  pyproject.toml  scan_large_files.py  shrink_dotgit.sh
stripe/: go.mod  go.sum  index.html  package-lock.json  package.json  server.go  tsconfig.json  vite.config.js
stripe/src/: App.jsx  CheckoutForm.jsx
