[project]
name = "rag4pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.61.0",
    "html2text>=2025.4.15",
    "jsonref>=1.1.0",
    "jieba>=0.42.1",
    "jupytext>=1.19.1",
    "langchain-google-genai>=4.2.0",
    "matplotlib>=3.10.8",
    "paddlenlp>=2.5.2",
    "paddleocr>=3.3.3",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.22",
    "ragas>=0.4.3",
    "torch>=2.10.0",
    "unstructured[md,pdf]>=0.18.27",
]

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.3.0",
    "pre-commit>=3.4.0",
    "ipykernel",
    "python-dotenv>=1.2.1",
    "viztracer>=1.1.1",
    "ipywidgets>=8.1.8",
    "pytest-asyncio>=1.3.0",
]
